Add icon class for fontawesome

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,10 @@
 
 <body>
   
+   <header class="top">
+    <h1><a href="#">Application Banner</a></h1>
+  </header>
+
   <div class="navigation">
     <nav class="siteNav">
       <ul>
@@ -55,7 +59,9 @@
   	<a class="icon fa-car" href="#">Let's Go</a>
   </div>
 
-
+  <footer>
+    <p>&copy; Application Footer Section</p>
+  </footer>
 
 	<script src="scripts/bundle.js"></script>
 </body>
