--- a/src/index.html
+++ b/src/index.html
@@ -108,16 +108,16 @@
     <p>&copy; Application Footer Section</p>
   </footer>
 
-  <div class="icon-bar footer--fixed">
-    <a href="#">
+  <div class="l-mobileFooter l-mobileFooter--fixed mobileFooter">
+    <a class="l-mobileFooter__menu mobileFooter__menu" href="#">
       <i class="fa fa-home"></i>
       Home
     </a>
-    <a href="#">
+    <a class="l-mobileFooter__menu mobileFooter__menu" href="#">
       <i class="fa fa-bell"></i>
       News
     </a>
-    <a href="#">
+    <a class="l-mobileFooter__menu mobileFooter__menu" href="#">
       <i class="fa fa-user"></i>
       Sign In
     </a>
