--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
 <body>
   
-  <navigation class="l-navigation navigation">
+  <navigation class="l-stickyHeader l-navigation navigation">
     <!-- <a href="#" class="icon fa-bars toggleNav">Menu</a> -->
 
     <div class="l-navigation__section navigation__section">
@@ -42,26 +42,26 @@
     </div>
   </navigation>
 
- <!-- <div class="siteContainer"> -->
-
-   <div>
-     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iste nesciunt, quisquam! Deleniti architecto alias dolores, tempora ducimus, rem saepe? Quidem ducimus temporibus cumque officiis eligendi beatae vel minima incidunt quam doloribus? Porro optio vitae, consequatur, quod natus recusandae cum rem mollitia voluptatem velit repellendus eligendi impedit est ex numquam molestiae expedita repellat fuga, et deserunt vel quos quasi. Sunt quos, illo aliquid illum totam, eius aliquam eligendi necessitatibus rem eveniet ad natus nam ab voluptatibus, amet. Doloremque laborum velit autem quos eum inventore quam, necessitatibus obcaecati, expedita commodi nesciunt nostrum rem incidunt. Natus doloremque accusamus eligendi vero, laboriosam repellat.
-   </div>
+  <div class="stickyContent">
+    <div>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iste nesciunt, quisquam! Deleniti architecto alias dolores, tempora ducimus, rem saepe? Quidem ducimus temporibus cumque officiis eligendi beatae vel minima incidunt quam doloribus? Porro optio vitae, consequatur, quod natus recusandae cum rem mollitia voluptatem velit repellendus eligendi impedit est ex numquam molestiae expedita repellat fuga, et deserunt vel quos quasi. Sunt quos, illo aliquid illum totam, eius aliquam eligendi necessitatibus rem eveniet ad natus nam ab voluptatibus, amet. Doloremque laborum velit autem quos eum inventore quam, necessitatibus obcaecati, expedita commodi nesciunt nostrum rem incidunt. Natus doloremque accusamus eligendi vero, laboriosam repellat.
+    </div>
 
     <div>
-     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iste nesciunt, quisquam! Deleniti architecto alias dolores, tempora ducimus, rem saepe? Quidem ducimus temporibus cumque officiis eligendi beatae vel minima incidunt quam doloribus? Porro optio vitae, consequatur, quod natus recusandae cum rem mollitia voluptatem velit repellendus eligendi impedit est ex numquam molestiae expedita repellat fuga, et deserunt vel quos quasi. Sunt quos, illo aliquid illum totam, eius aliquam eligendi necessitatibus rem eveniet ad natus nam ab voluptatibus, amet. Doloremque laborum velit autem quos eum inventore quam, necessitatibus obcaecati, expedita commodi nesciunt nostrum rem incidunt. Natus doloremque accusamus eligendi vero, laboriosam repellat.
-   </div>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iste nesciunt, quisquam! Deleniti architecto alias dolores, tempora ducimus, rem saepe? Quidem ducimus temporibus cumque officiis eligendi beatae vel minima incidunt quam doloribus? Porro optio vitae, consequatur, quod natus recusandae cum rem mollitia voluptatem velit repellendus eligendi impedit est ex numquam molestiae expedita repellat fuga, et deserunt vel quos quasi. Sunt quos, illo aliquid illum totam, eius aliquam eligendi necessitatibus rem eveniet ad natus nam ab voluptatibus, amet. Doloremque laborum velit autem quos eum inventore quam, necessitatibus obcaecati, expedita commodi nesciunt nostrum rem incidunt. Natus doloremque accusamus eligendi vero, laboriosam repellat.
+    </div>
 
     <div>
-     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iste nesciunt, quisquam! Deleniti architecto alias dolores, tempora ducimus, rem saepe? Quidem ducimus temporibus cumque officiis eligendi beatae vel minima incidunt quam doloribus? Porro optio vitae, consequatur, quod natus recusandae cum rem mollitia voluptatem velit repellendus eligendi impedit est ex numquam molestiae expedita repellat fuga, et deserunt vel quos quasi. Sunt quos, illo aliquid illum totam, eius aliquam eligendi necessitatibus rem eveniet ad natus nam ab voluptatibus, amet. Doloremque laborum velit autem quos eum inventore quam, necessitatibus obcaecati, expedita commodi nesciunt nostrum rem incidunt. Natus doloremque accusamus eligendi vero, laboriosam repellat.
-   </div>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iste nesciunt, quisquam! Deleniti architecto alias dolores, tempora ducimus, rem saepe? Quidem ducimus temporibus cumque officiis eligendi beatae vel minima incidunt quam doloribus? Porro optio vitae, consequatur, quod natus recusandae cum rem mollitia voluptatem velit repellendus eligendi impedit est ex numquam molestiae expedita repellat fuga, et deserunt vel quos quasi. Sunt quos, illo aliquid illum totam, eius aliquam eligendi necessitatibus rem eveniet ad natus nam ab voluptatibus, amet. Doloremque laborum velit autem quos eum inventore quam, necessitatibus obcaecati, expedita commodi nesciunt nostrum rem incidunt. Natus doloremque accusamus eligendi vero, laboriosam repellat.
+    </div>
 
     <div>
-     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iste nesciunt, quisquam! Deleniti architecto alias dolores, tempora ducimus, rem saepe? Quidem ducimus temporibus cumque officiis eligendi beatae vel minima incidunt quam doloribus? Porro optio vitae, consequatur, quod natus recusandae cum rem mollitia voluptatem velit repellendus eligendi impedit est ex numquam molestiae expedita repellat fuga, et deserunt vel quos quasi. Sunt quos, illo aliquid illum totam, eius aliquam eligendi necessitatibus rem eveniet ad natus nam ab voluptatibus, amet. Doloremque laborum velit autem quos eum inventore quam, necessitatibus obcaecati, expedita commodi nesciunt nostrum rem incidunt. Natus doloremque accusamus eligendi vero, laboriosam repellat.
-   </div>
-  <!-- </div> -->
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iste nesciunt, quisquam! Deleniti architecto alias dolores, tempora ducimus, rem saepe? Quidem ducimus temporibus cumque officiis eligendi beatae vel minima incidunt quam doloribus? Porro optio vitae, consequatur, quod natus recusandae cum rem mollitia voluptatem velit repellendus eligendi impedit est ex numquam molestiae expedita repellat fuga, et deserunt vel quos quasi. Sunt quos, illo aliquid illum totam, eius aliquam eligendi necessitatibus rem eveniet ad natus nam ab voluptatibus, amet. Doloremque laborum velit autem quos eum inventore quam, necessitatibus obcaecati, expedita commodi nesciunt nostrum rem incidunt. Natus doloremque accusamus eligendi vero, laboriosam repellat.
+    </div>
 
-   <footer class="l-footer footer">
+  </div>
+
+  <footer class="l-stickyFooter l-footer footer">
     <div class="l-footer__section footer__section">
     </div>
     <div class="l-footer__section footer__section">
@@ -103,7 +103,7 @@
       </div>
     </div>
   </footer>
-
+ 
   <div class="l-mobileFooter l-mobileFooter--fixed mobileFooter">
     <a class="l-mobileFooter__menu mobileFooter__menu" href="#">
       <i class="fa fa-home"></i>
@@ -119,7 +119,6 @@
     </a>
   </div>
 
- 
 
   <script src="scripts/bundle.js"></script>
 </body>
