Hightlight image with arrow nagivation

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
         <ul class="chamberContainer" data-chamber="container" data-deg="0">
 
           <li class="chamberCircle" data-chamber="circle" data-message='{"title": "Promo for today", "teaser": "Teaser for Promo", "link": "http://www.promot.com" }' data-deg="0">
-            <img class="chamberCircle__image" data-chamber="image" src="../images/chamber-logo.png" alt="">
+            <img class="chamberCircle__image" data-chamber="image" data-image="selected" src="../images/chamber-logo.png" alt="">
           </li>
 
           <li class="chamberCircle" data-chamber="circle" data-message='{"title": "News for today #1", "teaser": "Teaser for now #1", "link": "http://www.news#1.com" }' data-deg="300">
